<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- SHARE -->
    <string name="share">Share</string>
    <string name="share_end">. Read news on Android, iOS and WP8 with \"News from\"</string>
    <!-- NEWS ITEM DETAIL FRAGMENT -->
    <string name="see_full_article">Web Page</string>
    <!-- NEWSGROUP detail -->
    <string-array name="popupmenu_newsource">
        <item>@string/delete</item>
    </string-array>
    <!-- NEWSGROUP list -->
    <string name="all_groups_title">Your groups</string>

    <string-array name="popupmenu_newsgroup">
        <item>@string/delete</item>
        <item>@string/rename</item>
    </string-array>

    <!-- NEWS GROUP LIST -->
    <string name="nofeedsadded">You have no news sources added. You can add news sources by pressing the "+" button. The add button can be found in the action bar, or if you hardware buttons, it can be found by clicking the menu button on the device.</string>
    <string name="update_data">Refresh</string>
    <!-- SEARCH -->
    <string name="search_hint">News title</string>
    <string name="search">Search</string>
    <string name="online">Online</string>
    <string name="local">Local</string>
    <!-- ADD FRAGMENT -->
    <string name="category">Category</string>
    <string name="manual">Manual</string>
    <string name="recommended">Recommended</string>
    <string name="categories">Categories</string>
    <string name="new_group">Add a new group</string>
    <string name="add_element_group_title">The name of the new group</string>
    <string name="add_element_fragment_title">Add a new feed</string>
    <string name="add_element_feed_title">The name of the feed</string>
    <string name="add_element_feed_description">The description of the feed</string>
    <string name="add_element_feed_rss">The rss address of the feed</string>
    <!-- TEST VALUES -->
    <string name="two_digit_int">99</string>
    <string name="lorem_w_5">Lorem ipsum dolor sit amet.</string>
    <!-- DELETE DIALOG FRAGMENT -->
    <string name="delete_dialog_fragment_title">Do you want to delete this?</string>
    <string name="delete_dialog_fragment_message">Are you sure?</string>
    <!-- GENERAL -->
    <string name="loading">Loading</string>
    <string name="nointernet">No internet connection</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="feed">Feed</string>
    <string name="feeds">Feeds</string>
    <string name="group">Group</string>
    <string name="groups">Groups</string>
    <string name="app_name">News from</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>

    <!-- LOGIN ACTIVITY -->
    <string name="app_id">498421953559265</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="login_microsoft">Login with Microsoft</string>
    <string name="login_message">We use your name in order to sync your news across all devices</string>
    <string name="logout">Log out</string>
    <string name="title_activity_add_element_select_feed">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_element_select_group">Select a group</string>

</resources>