<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:paddingLeft="@dimen/left_and_right_margin"
              android:paddingRight="@dimen/left_and_right_margin"

              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:layout_marginLeft="4dp"
            android:layout_marginTop="@dimen/top_and_bottom_margin"
            android:textStyle="bold"
            android:text="@string/group"
            android:textSize="@dimen/medium_font"
            android:layout_width="wrap_content"
            android:layout_marginRight="@dimen/left_and_right_margin"
            android:layout_height="wrap_content"/>
    <Spinner
            tools:listitem="@layout/spinner_row_newsgroup"
            android:id="@+id/add_element_group_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    <EditText
            android:layout_marginLeft="4dp"
            android:id="@+id/add_element_group_title"
            android:hint="@string/add_element_group_title"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:nextFocusDown="@+id/add_element_feed_title"
            android:layout_width="fill_parent"/>
    <TextView
            android:layout_marginLeft="4dp"
            android:textStyle="bold"
            android:text="@string/category"
            android:textSize="@dimen/medium_font"
            android:layout_width="wrap_content"
            android:layout_marginRight="@dimen/left_and_right_margin"
            android:layout_height="wrap_content"/>
    <Spinner
            tools:listitem="@layout/spinner_row_newsgroup"
            android:id="@+id/add_element_category_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:layout_marginLeft="4dp"
            android:textStyle="bold"
            android:text="@string/feed"
            android:textSize="@dimen/medium_font"
            android:layout_width="wrap_content"
            android:layout_marginRight="@dimen/left_and_right_margin"
            android:layout_height="wrap_content"/>
    <Spinner
            tools:listitem="@layout/spinner_row_newsgroup"
            android:id="@+id/add_element_feed_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
</LinearLayout>